--- a/css/detail.css
+++ b/css/detail.css
@@ -27,10 +27,12 @@ td,th{border:1px solid #ccc; padding: 0 14px;}
 @media only screen and (max-width: 768px) {
 	.article_header{ height: 60px;line-height: 60px;}
 	.article_header h1{font-size:30px; height: 60px; line-height: 60px;}
+	.article_body h4{margin-top: 20px;} 
 }
 
 @media only screen and (max-width: 480px) {
 	.article_header{ height: 40px;line-height: 40px;}
 	.article_header h1{font-size:26px; height: 40px; line-height: 40px;}
+	.article_body h4{margin-top: 20px!important;} 
 	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"{display: none;}
 }
