--- a/_view/docs.ejs
+++ b/_view/docs.ejs
@@ -3,6 +3,8 @@
 <head>
   <%- include('controls/head') %>
   <link rel="stylesheet" type="text/css" href="<%= Source_css %>detail.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="<%= Source_css %>monokai_sublime.css" media="screen">
+  <script type="text/javascript" src="<%= Source_js %>highlight.pack.js"></script>
 </head>
 <body>
   <!-- nav -->
@@ -26,5 +28,6 @@
   </div>
  <!-- footer --> 
  <%- include('controls/footer') %>
+ <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
