--- a/css/detail.css
+++ b/css/detail.css
@@ -1,8 +1,9 @@
 .article{position: relative;}
 .article_header{ height: 100px; line-height: 100px; width: 100%;}
-.article_header h1{font-weight:300; font-size:36px; text-align: left; color: #212121; width: 100%;height: 100px; line-height: 100px;}
+.article_header h1{font-weight:300; font-size:54px; text-align: center; color: #212121; width: 100%;height: 70px; line-height: 70px; font-weight: 500;}
+.article_header p{height: 30px; line-height: 30px; width: 80%; font-size: 18px; color: #858688;margin-right: 20%; text-align: right; overflow: hidden;}
 
-.article_body,.article_footer{padding: 0 100px 0 150px;}
+.article_body,.article_footer{padding: 0 100px 0 150px; margin-top: 40px;}
 .article_body {padding: 0;}
 .article_body p{color: #292929; margin-bottom: 15px; line-height: 21px; word-wrap:break-word; }
 .article_body p em {color: #292929; margin-bottom: 15px;font-size:14px;} /* for disclaimers */
@@ -11,11 +12,14 @@
 .article_body pre{margin-top: 20px;}
 .article_body p img { max-width: 80%;  margin-right: 20px; flex: 1;}
 .article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"]{max-width: 28%; height: 150px;}
-.article_body h1{font-size: 24px; color: #343537; height: 30px; line-height: 30px; margin-top: 40px; margin-bottom: 15px; font-weight: 400;}
+.article_body h1{font-size: 24px; color: #343537; height: 30px; line-height: 30px; margin-top: 40px; margin-bottom: 15px; font-weight: 300;}
 .article_body h2{font-size: 18px; color: #343537; height: 20px; line-height: 20px; margin-top: 40px;}
 .article_body h3{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;}
 .article_body h4{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;} /*margin-bottom: -10px;*/
 .article_body ol ul li{text-indent:15px;list-style: circle; list-style-position: inside;}
+
+.article_body pre{background: #23241F; color: #fff; display: block; padding: 5px 10px; font-size: 16px; line-height: 21px; margin: 15px 0; white-space: pre-wrap; word-wrap: break-word;}
+
 
 table{margin-top: 20px;}
 table,td,th,tr{height: 40px; line-height: 40px; color: #333; text-align: left;}
@@ -25,14 +29,16 @@ tr:nth-child(odd){background-color: #fff;}
 td,th{border:1px solid #ccc; padding: 0 14px;}
 
 @media only screen and (max-width: 768px) {
-	.article_header{ height: 60px;line-height: 60px;}
-	.article_header h1{font-size:30px; height: 60px; line-height: 60px;}
+	.article_header{ height: 65px;line-height: 65px;}
+	.article_header h1{font-size:32px; height: 40px; line-height: 40px;}
+	.article_header p{font-size: 18px;height: 25px; line-height: 25px;}
 	.article_body h4{margin-top: 20px;} 
 }
 
 @media only screen and (max-width: 480px) {
-	.article_header{ height: 40px;line-height: 40px;}
-	.article_header h1{font-size:26px; height: 40px; line-height: 40px;}
+	.article_header{ height: 50px;line-height: 50px;}
+	.article_header h1{font-size:26px; height: 30px; line-height: 30px;}
+	.article_header p{font-size: 14px;height: 20px; line-height: 20px;}
 	.article_body h4{margin-top: 20px!important;} 
 	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"{display: none;}
 }
