--- a/css/detail.css
+++ b/css/detail.css
@@ -1,6 +1,6 @@
 .article{position: relative;}
-.article_header{ height: 100px; line-height: 100px; width: 100%;}
-.article_header h1{font-weight:300; font-size:54px; text-align: center; color: #212121; width: 100%;height: 70px; line-height: 70px; font-weight: 500;}
+.article_header{ height: 50px; line-height: 50px; width: 100%; margin-top: 40px;}
+.article_header h1{font-weight:300; font-size:32px; text-align: left; color: #212121; width: 100%;height: 40px; line-height: 40px;}
 .article_header p{height: 30px; line-height: 30px; width: 80%; font-size: 18px; color: #858688;margin-right: 20%; text-align: right; overflow: hidden;}
 
 .article_body,.article_footer{padding: 0 100px 0 150px; margin-top: 40px;}
@@ -29,15 +29,16 @@ tr:nth-child(odd){background-color: #fff;}
 td,th{border:1px solid #ccc; padding: 0 14px;}
 
 @media only screen and (max-width: 768px) {
-	.article_header{ height: 65px;line-height: 65px;}
-	.article_header h1{font-size:32px; height: 40px; line-height: 40px;}
+	.article_body {padding:0 20px;}
+	.article_header{ height: 32px;line-height: 32px;}
+	.article_header h1{font-size:32px; height: 40px; line-height: 32px;}
 	.article_header p{font-size: 18px;height: 25px; line-height: 25px;}
 	.article_body h4{margin-top: 20px;} 
 }
 
 @media only screen and (max-width: 480px) {
-	.article_header{ height: 50px;line-height: 50px;}
-	.article_header h1{font-size:26px; height: 30px; line-height: 30px;}
+	.article_header{ padding:0 20px; margin-top: 0;}
+	.article_header h1{font-size:26px; height: 30px; line-height: 30px;margin-top: 0px;}
 	.article_header p{font-size: 14px;height: 20px; line-height: 20px;}
 	.article_body h4{margin-top: 20px!important;} 
 	.article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"{display: none;}
