--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -17,8 +17,16 @@
       <div class="intro"><span>Find the latest prototypes and test resultes here. Get to know the team and the limitless future of Cisco Spark.</span></div>-->
       <!--content blocks -->
       <div class="block-wrapper">
-        <div class="block-l" style="background-image:url('<%= Source_img %>project.jpg')"> <a href="./current/index.html"><span>Current Projects</span></a></div>
-        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <a href="./experimental/index.html"><span>Experimental Concepts</span></a></div>
+      <a class="sectionBlock" href="./current/index.html">
+        <div class="block-l"  style="background-image:url('<%= Source_img %>project.jpg')">
+        <div class="block_cover"> 
+        <p class="list_space"></p>
+        <p class="list_title">Current Projects</>
+        </div>
+        </div>
+      </a>
+      <a href="./experimental/index.html">
+        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <p class="list_space"></p><p class="list_title">Experimental Concepts</p></div></a>
         <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> <a href="./archived/index.html"><span>Archived Projects</span></a></div>
         <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
       </div>
