--- a/css/public.css
+++ b/css/public.css
@@ -18,7 +18,7 @@ ul,li{list-style: none; margin: 0px;}
 .sideMenu li { list-style: none;}
 .sideMenu a { display: block; padding: 10px 15px; text-align: left; }
 
-.breadcrumbs{ padding: 0; margin: 7px 0; height: 30px; max-width: 100%; overflow: hidden;}
+.breadcrumbs{ padding: 0; margin-top:20px; height: 30px; max-width: 100%; overflow: hidden;}
 .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
 .breadcrumbs li a{ color: #4F5051;font-size: 12px; }
 .breadcrumbs li+li::before{ content: ' › '; color: #4F5051; }
@@ -53,6 +53,8 @@ ul,li{list-style: none; margin: 0px;}
 .banner span {  display: block;  height: 20px;  text-align: center;  width: 100%;  margin: 110px 0;}
 .intro{  width: 100%; min-height: 60px; margin-bottom: 20px; clear: both;}
 .intro span { display: block; height: 30px; width: 100%; color: #666; text-align: center; font-size: 20px; margin: 15px 0;}
+
+/*section blocks */
 .block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
 /* blocks for right, left, top and bottom right, top and bottom left, and all, ll=large left, lr = large*/
 .block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 240px; border: 1px solid #f5f5f6; position: relative;  margin-bottom: 20px; background-repeat: no-repeat; background-position: center; background-size: cover; }
@@ -61,8 +63,11 @@ ul,li{list-style: none; margin: 0px;}
 .block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: rgba(106,107,108,0.5);  position: absolute; bottom: 0px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
 .block-l a:hover, .block-r a:hover, .block-a a:hover{ background-color: rgba(106,107,108,0.8); }
 .block-a { width: 100%;}
-
-
+.list_space{display: block;width: 100%; height: 15px; margin: 0px;}
+.list_title{font-size:16px; margin:0px 20px 0 20px; line-height: 20px; font-weight:500; text-align: center;}
+.block_cover{width: 100%; height: 20%; position: absolute; left: 0px; bottom:0px; color: #fff; background-color: rgba(7,193,228,0.95);}
+.sectionBlock:hover .block_cover{transition: height 0.2s; height: 100%; transition: top 0.2s; top:0;background-color: rgba(7,193,228,0.95); }
+.sectionBlock:hover .list_space{height: 50%;}
 .pagination{ margin-top: 40px; text-align: center;}
 /* divider not used */
 .divider{ border-bottom: 1px dotted #ccc; border-top: 0; display: none;}
@@ -101,18 +106,18 @@ ul,li{list-style: none; margin: 0px;}
   .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ border-bottom: 1px solid #049fd9; height: 59px;}
 
 }
-@media only screen and ( max-width: 480px) {
+@media only screen and ( max-width: 500px) {
   .intro { margin-bottom: 90px;}
   .header{width:90%; margin: 0 auto;}
   .container_left{ width: 10px; -webkit-flex:none; flex:none;}
   .copyright{margin: 40px 0; font-size: 12px;}
 
-  .wrapper {padding: 0 15px;}
+  .wrapper {padding: 0 20px;}
   .breadcrumbs{ padding: 0 20px; margin: 0px; margin-top:30px;}
   .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 3px; }
 
   .NavContent{ height: 40px;}
-  .NavContent .Nav{ margin-left: 0; width:100%; height: 40px; text-align: center;}
+  .NavContent .Nav{ margin-left: 0; width:100%; height: 40px; text-align: center; padding:0 20px;}
   .NavContent .Nav>li{ margin-right: 2px; margin-left: 3px; height: 40px; line-height: 40px; }
   .NavContent .Nav>li>a{ height: 40px; line-height: 40px; padding: 0 7px;  font-size: 14px;}
   .NavContent .Nav>li:hover>a,.NavContent .Nav>li .current{ border-bottom: 1px solid #049fd9; height: 39px;}
