--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -25,11 +25,28 @@
         </div>
         </div>
       </a>
-      <a href="./experimental/index.html">
-        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> <p class="list_space"></p><p class="list_title">Experimental Concepts</p></div></a>
-        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> <a href="./archived/index.html"><span>Archived Projects</span></a></div>
-        <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> <a href="./guide/index.html"><span>FAQ & Troubleshoot</span></a></div>
+      <a class="sectionBlock" href="./experimental/index.html">
+        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> 
+        <div class="block_cover"> 
+          <p class="list_space"></p>
+          <p class="list_title">Experimental Concepts</p></div>
+          </div>
+      </a>
+      <a class="sectionBlock" href="./archived/index.html">
+        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> 
+        <div class="block_cover"> 
+          <p class="list_space"></p>
+          <p class="list_title">Archived Projects</p></div></div>
+      </a>
+      <a class="sectionBlock" href="./guide/index.html">
+        <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> 
+        <div class="block_cover"> 
+        <p class="list_space"></p>
+        <p class="list_title">FAQ & Troubleshoot</p>
+        </div>
+        </div>
       </div>
+      </a>
     </div>
     <div class="container_left"></div>
   </div>
