--- a/css/list.css
+++ b/css/list.css
@@ -25,7 +25,7 @@
   }
 
   .articleBlock_cover .list_space{display: block;width: 100%; height: 10px; margin: 0px;}
-  .articleBlock_cover .list_title{font-size:16px; margin:0px 20px 0 20px; line-height: 20px; font-weight:500;}
+  .articleBlock_cover .list_title{font-size:16px; line-height: 20px; font-weight:500;}
   .articleBlock_cover .list_item_date{font-size:12px; margin: 3px 20px 0 20px;line-height: 18px;}
   .articleBlock_cover .list_item_desc{font-size:14px; margin:30px 20px 0 20px; line-height: 18px;  height: 54px; overflow: hidden;}
 
