--- a/_view/controls/article.ejs
+++ b/_view/controls/article.ejs
@@ -2,7 +2,7 @@
 	<header class='article_header'>
 		<h1><%= Title %></h1>
 		<% if(Author != '') { %>
-			<p><%= Author %></p>
+			<p><i style="background-image:url('<%= Source_img_atricle %>avatar/<%= Author %>.png')"></i><%= Author %></p>
 		<% } %>
 	</header>
 	<div class='article_body'>
