--- a/css/detail.css
+++ b/css/detail.css
@@ -13,10 +13,10 @@
 .article_body pre{margin-top: 20px;}
 .article_body p img { max-width: 80%;  margin-right: 20px; flex: 1;}
 .article_body p img[alt="mobile"],.article_body p img[alt="Desktop"],.article_body p img[alt="MX800"],.article_body p img[alt="SparkBoard"]{max-width: 28%; height: 150px;}
-.article_body h1{font-size: 24px; color: #343537; height: 30px; line-height: 30px; margin-top: 40px; margin-bottom: 15px; font-weight: 300;}
-.article_body h2{font-size: 18px; color: #343537; height: 20px; line-height: 20px; margin-top: 40px;}
-.article_body h3{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;}
-.article_body h4{font-size: 16px; color: #343537; height: 20px; line-height: 20px; margin-top: 20px;} /*margin-bottom: -10px;*/
+.article_body h1{font-size: 24px; color: #343537; line-height: 30px; margin-top: 40px; margin-bottom: 15px; font-weight: 300;}
+.article_body h2{font-size: 18px; color: #343537; line-height: 20px; margin-top: 40px;}
+.article_body h3{font-size: 16px; color: #343537; line-height: 20px; margin-top: 20px;}
+.article_body h4{font-size: 16px; color: #343537; line-height: 20px; margin-top: 20px;} /*margin-bottom: -10px;*/
 .article_body ol ul li{text-indent:15px;list-style: circle; list-style-position: inside;}
 
 .article_body pre{background: #23241F; color: #fff; display: block; padding: 5px 10px; font-size: 16px; line-height: 21px; margin: 15px 0; white-space: pre-wrap; word-wrap: break-word;}
@@ -32,7 +32,7 @@ td,th{border:1px solid #ccc; padding: 0 14px;}
 @media only screen and (max-width: 768px) {
 	.article_body {padding:0 20px;}
 	.article_header{ height: 65px;line-height: 65px;}
-	.article_header h1{font-size:32px; height: 40px; line-height: 32px;}
+	.article_header h1{font-size:32px; line-height: 32px;}
 	.article_header p{font-size: 18px;height: 25px; line-height: 25px;}
 	.article_header p i{ width: 25px; height: 25px;  right: -30px; }
 	.article_body h4{margin-top: 20px;} 
@@ -40,7 +40,7 @@ td,th{border:1px solid #ccc; padding: 0 14px;}
 
 @media only screen and (max-width: 480px) {
 	.article_header{ padding:0 20px; margin-top: 0; height: 50px;line-height: 50px;}
-	.article_header h1{font-size:20px; height: 30px; line-height: 30px;margin-top: 0px;}
+	.article_header h1{font-size:20px;  line-height: 30px;margin-top: 0px;}
 	.article_header p{font-size: 14px;height: 20px; line-height: 20px;}
 	.article_header p i{ width: 20px; height: 20px;  right: -25px; }
 	.article_body h4{margin-top: 20px!important;} 
