--- a/css/public.css
+++ b/css/public.css
@@ -43,7 +43,7 @@ ul,li{list-style: none; margin: 0px;}
 .NavContent .Nav>li .subMenu{position: absolute; top: 100%; left: 0px;  display: none; margin: 0px;}
 .NavContent .Nav>li:hover .subMenu{display: block; width: 100%; text-align: center;}
 .subMenu li {width: 100%; height: 40px; }
-.subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #4f5051; text-align: center; font-size: 14px;}
+.NavContent .Nav .subMenu li a{ display: block; width: 100%; height: 40px; line-height: 40px; text-decoration: none; background:rgba(255,255,255,0.9); color: #4f5051; text-align: center; font-size: 14px;}
 .subMenu li a:hover,.subMenu li .current{color: #07C1E4;}
 
 /* menu */
