--- a/css/prototype.css
+++ b/css/prototype.css
@@ -1,7 +1,7 @@
 
 
-.list_space{display: block;width: 100%; height: 15px; margin: 0px;}
-.list_title{font-size:16px; margin:0px 20px 0 20px;line-height:40px; height: 40px; font-weight:500; text-align: center;}
+.sectionBlock .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
+.sectionBlock .list_title{font-size:16px; line-height:40px; height: 40px; font-weight:500; margin-top:0px; text-align: center;  }
 
 .block_cover{width: 100%; height: 40px; line-height: 40px; position: absolute; left: 0px; bottom:0px; color: #fff; background-color: rgba(7,193,228,0.95);}
 
