--- a/css/public.css
+++ b/css/public.css
@@ -63,8 +63,8 @@ ul,li{list-style: none; margin: 0px;}
 .block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: rgba(106,107,108,0.5);  position: absolute; bottom: 0px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
 .block-l a:hover, .block-r a:hover, .block-a a:hover{ background-color: rgba(106,107,108,0.8); }
 .block-a { width: 100%;}
-.list_space{display: block;width: 100%; height: 15px; margin: 0px;}
-.list_title{font-size:16px;  line-height: 20px; height: 20px; width: 100%; overflow: hidden; font-weight:500; text-align: center;}
+.sectionBlock .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
+.sectionBlock .list_title{font-size:16px;  line-height: 20px; height: 20px; width: 100%; overflow: hidden; font-weight:500; text-align: center;}
 .block_cover{width: 100%; height: 20%; position: absolute; left: 0px; bottom:0px; color: #fff; background-color: rgba(7,193,228,0.95);}
 
 /*
