--- a/css/public.css
+++ b/css/public.css
@@ -32,7 +32,7 @@ ul,li{list-style: none; margin: 0px;}
 /* center nav items */
 .NavContent{ width: 1024px; margin: 0 auto; position: relative; height: 80px;}
 .NavContent .logo{display: block; position: absolute; top: 0px;left: 10px; height: 80px; }
-.NavContent .logo img{height: 70%; position: absolute; top: 10px; left: 0px;}
+.NavContent .logo img{height: 70%; position: absolute; top: 20px; left: 0px;}
 .NavContent input,.NavContent menu-icon{display: none;}
 
 .NavContent .Nav{ margin-left: 124px; width:900px; height: 80px;}
@@ -57,15 +57,20 @@ ul,li{list-style: none; margin: 0px;}
 /*section blocks */
 .block-wrapper{ width: 100%; margin-bottom: 20px; clear: both;}
 /* blocks for right, left, top and bottom right, top and bottom left, and all, ll=large left, lr = large*/
-.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 240px; border: 1px solid #f5f5f6; position: relative;  margin-bottom: 20px; background-repeat: no-repeat; background-position: center; background-size: cover; }
+.block-l, .block-r, .block-a, .block-tr, .block-tl, .block-br, .block-bl, .block-ll, .block-lr{ width: 48%; height: 240px; border: 1px solid #ccc; border-radius: 5px; position: relative;  margin-bottom: 20px; background-repeat: no-repeat; background-position: center; background-size: cover; }
 .block-l{ float: left;}
 .block-r{ float: right;}
-.block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: rgba(106,107,108,0.5);  position: absolute; bottom: 0px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
-.block-l a:hover, .block-r a:hover, .block-a a:hover{ background-color: rgba(106,107,108,0.8); }
+.block-l a, .block-r a, .block-a a{ display: block; width: 100%; background-color: rgba(235,235,236,0.95);  position: absolute; bottom: 0px; text-align: center; color: #fff; padding: 10px 0; text-decoration:none;}
+.block-l a:hover, .block-r a:hover, .block-a a:hover{ background-color: rgba(235,235,236,0.95); }
 .block-a { width: 100%;}
 .sectionBlock .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
-.sectionBlock .list_title{font-size:16px;  line-height: 20px; height: 20px; width: 100%; overflow: hidden; font-weight:500; text-align: center;}
-.block_cover{width: 100%; height: 20%; position: absolute; left: 0px; bottom:0px; color: #fff; background-color: rgba(7,193,228,0.95);}
+.sectionBlock .list_title{font-size:16px;  line-height: 20px; height: 20px; width: 100%; overflow: hidden; font-weight:500; text-align: center; margin-top:10px;}
+
+.block_cover{width: 100%; height: 40px; line-height: 40px; position: absolute; left: 0px; bottom:0px; color: #292929; background-color: rgba(235,235,236,0.95);}
+
+.sectionBlock:hover .block_cover{transition: height 0.2s; height: 240px; background-color: rgba(235,235,236,0.95);}
+.sectionBlock:hover .list_title{line-height:240px; height:240px;}
+.block_cover{width: 100%; height: 20%; position: absolute; left: 0px; bottom:0px; color: #292929; background-color: rgba(235,235,236,0.95);}
 
 /*
 .sectionBlock:hover .block_cover{transition: height 0.2s; height: 100%; background-color: rgba(7,193,228,0.95); }
