--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -3,6 +3,11 @@
 <head>
   <%- include('controls/head') %>
   <link rel="stylesheet" type="text/css" href="<%= Source_css %>prototype.css" media="screen">
+  <style>
+  @media only screen and ( max-width: 500px) {
+.breadcrumbs {display: none;}
+  }
+  </style>
 </head>
 <body>
   <!-- nav -->
@@ -35,7 +40,7 @@
         <div class="block_cover">
           <p class="list_title">Archived Projects</p></div></div>
       </a>
-      <a class="sectionBlock" href="./guide/index.html">
+      <a class="sectionBlock" href="./faq/index.html">
         <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> 
         <div class="block_cover">
         <p class="list_title">FAQ & Troubleshoot</p>
