--- a/css/list.css
+++ b/css/list.css
@@ -1,64 +1,48 @@
 /* list view properties for desktop */
+.article_con_thumbnail,.article_con_list{width: 100%; position: relative;}
+
 @media only screen and (min-width: 769px) {
-  .articleBlock{
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    width: 25%;
-    height: 180px;
-    margin: 10px;
-    position: relative;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;
-  }
+  .articleBlock{text-decoration: none;}
 
-  .articleBlock_cover{
-    width: 100%;
-    height: 100%; 
-    position: absolute; 
-    left: 0px; 
-    top: 120px;
-    color: #292929;
-    background-color: rgba(235,235,236,0.95);
-  }
+  .article_view_btn{display: block; width: 66px; height: 28px; position: absolute; top: -32px; right: 100px;}
+  .article_view_btn a{display: inline-block; width: 20px; height: 20px; background-position: center; background-size: cover;background-repeat: no-repeat;}
+  .btn_list{margin-left: 5px;}
+  .article_con_list .btn_thumbnail{background-image: url('../img/thumbnail_off.svg'); cursor: pointer;}
+  .article_con_list .btn_list{background-image: url('../img/list_on.svg'); }
+  .article_con_thumbnail .btn_thumbnail{background-image: url('../img/thumbnail_on.svg');}
+  .article_con_thumbnail .btn_list{background-image: url('../img/list_off.svg');cursor: pointer;}
 
-  .articleBlock_cover .list_space{display: block;width: 100%; height: 10px; margin: 0px;}
-  .articleBlock_cover .list_title{font-size:16px; line-height: 20px; font-weight:500; padding: 0 20px;}
-  .articleBlock_cover .list_item_date{font-size:12px; margin: 3px 20px 0 20px;line-height: 18px;}
-  .articleBlock_cover .list_item_desc{font-size:14px; margin:30px 20px 0 20px; line-height: 18px;  height: 54px; overflow: hidden;}
+  .article_con_list .articleBlock{position: relative; display: inline-block; width: 90%; margin: 20px auto 0 auto; height: 280px; border-bottom: 1px dotted #ccc;}
+  .article_con_list .articleBlock_cover{width: 100%; height: 100px; position: relative; }
+  .article_con_list .list_img{ height: 150px; width: 100%; margin: 10px; background-repeat: no-repeat; background-position: left;  background-size: contain; }
 
-  .articleBlock:hover .articleBlock_cover{
-      transition: top 0.2s;
-      top:0px;
+  .article_con_list .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
+  .article_con_list .list_title{ color: #6a6b6c; font-size:18px; margin:0px 10px 0 10px; line-height: 24px; text-decoration: underline; font-weight: 500;}
+  .article_con_list .list_item_date{ color: #aeaeaf;  font-size:14px; margin: 3px 10px 0 10px;line-height: 15px; position: absolute; top: 15px; right: 30px;}
+  .article_con_list .list_item_desc{ color: #858688; font-size:15px; margin:15px 10px 0 10px; line-height: 18px;  height: 36px; overflow: hidden; text-decoration: none !important; }
 
-  }
+  .article_con_list .articleBlock:hover .list_title{color: #4f5051;}
 
-  .articleBlock:hover .articleBlock_cover .list_space{
-      transition: height 0.2s;
-      height: 20px;    
-  }
+  .article_con_thumbnail .articleBlock{ display: inline-block; border-radius: 4px; width: 27%; height: 240px; margin: 14px; position: relative; overflow: hidden; border:1px solid #ccc; }
+  .article_con_thumbnail .list_img{display: block; width: 90%; height: 90%; margin: 5%; background-repeat: no-repeat; background-position: center;  background-size: contain; box-shadow: 2px 2px 2px 2px #f5f5f6; }
+  .article_con_thumbnail .articleBlock_cover{ width: 100%; height: 100%;  position: absolute; left: 0px; top: 175px; color: #292929; background-color: rgba(235,235,236,0.95); z-index: 5; }
+  .article_con_thumbnail .articleBlock_cover .list_space{display: block;width: 100%; height: 10px; margin: 0px;}
+  .article_con_thumbnail .articleBlock_cover .list_title{font-size:16px; line-height: 20px; font-weight:500; padding: 0 20px;}
+  .article_con_thumbnail .articleBlock_cover .list_item_date{font-size:12px; margin: 3px 20px 0 20px;line-height: 18px;}
+  .article_con_thumbnail .articleBlock_cover .list_item_desc{font-size:14px; margin:30px 20px 0 20px; line-height: 18px;  height: 54px; overflow: hidden;}
+
+  .article_con_thumbnail .articleBlock:hover {box-shadow: 2px 2px 5px 2px #aeaeaf; transition: top 0.2s; top:-4px; }
+  .article_con_thumbnail .articleBlock:hover .articleBlock_cover{ transition: top 0.2s; top:0px; }
+  .article_con_thumbnail .articleBlock:hover .articleBlock_cover .list_space{ transition: height 0.2s; height: 20px; }
 
 }
 
 
 @media only screen and (max-width: 768px) {
+  .article_view_btn,.list_img{display: none;}
   /* list view properties for mobile */
-  .articleBlock{
-    display: block;
-    border: none;
-    width: 100%;
-    min-width: 300px;
-    height: 100px;
-    border-bottom: 1px dotted #ccc;
-    background-image: none !important;
-    color: #666;
-    text-decoration: none !important;
-  }
-
+  .articleBlock{  display: block;  border: none; width: 100%;  min-width: 300px;  height: 100px;  border-bottom: 1px dotted #ccc;  background-image: none !important;  color: #666;  text-decoration: none !important; }
   .articleBlock_cover{background-color: none; position: relative; width: 100%; height: 100%; }
-
 
   .articleBlock_cover .list_space{display: block;width: 100%; height: 15px; margin: 0px;}
   .articleBlock_cover .list_title{font-size:16px; margin:0px 10px 0 10px; line-height: 20px; text-decoration: underline; font-weight: 500;}
