Placeholder for bio

--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -15,10 +15,56 @@
     <div class="main">
      <%- include('controls/breadcrumbs') %>   
       <!-- intro text -->
-      <div class="intro"><h1>Meet the team behind our prototypes</h1></div>
+      <div class="intro"><h1>Meet the team behind our prototypes</h1>
+      </div>
+      <!-- map section -->
+      <div class="teamMap">
       <%- include('controls/map') %> 
-      <!--content blocks -->
-     <!-- how to add the members.ejs here??? -->
+      </div>
+ 
+     <!-- team bio section -->
+     <div class="teamBioContainer">
+     <!-- Damon -->
+     <div class="teamBio" style="background: #FF3826;">
+       <img src="">
+       <h3 class="name">Hi, I am Damon</h3>
+       <span class="role">Prototype Guru, Team Manager</span>
+       <span class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam interdum metus. </span>
+       <p class="detailBio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non augue sed lacus venenatis sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce felis orci, interdum id nisl vel, bibendum tristique ante. Duis semper nibh eros, sed consequat ligula maximus eu. Integer aliquet dictum sapien nec rutrum. Pellentesque eget ornare lectus, in iaculis sapien. Cras in tortor sit amet justo lacinia vestibulum. Aliquam accumsan dignissim ipsum non dictum. Donec mauris ex, dapibus a pulvinar non, semper at lectus. Mauris luctus, mauris aliquam dapibus rhoncus, felis nunc sodales felis, in faucibus nisi neque eget odio. Cras porta vehicula metus nec blandit. </p>
+     </div>
+     <!-- Arthus -->
+     <div class="teamBio" style="background: #008000;">
+       <img src="">
+       <h3 class="name">Hi, I am Arthus</h3>
+       <span class="role">Front End Developer/Mobile Prototyper</span>
+       <span class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam interdum metus. </span>
+       <p class="detailBio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non augue sed lacus venenatis sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce felis orci, interdum id nisl vel, bibendum tristique ante. Duis semper nibh eros, sed consequat ligula maximus eu. Integer aliquet dictum sapien nec rutrum. Pellentesque eget ornare lectus, in iaculis sapien. Cras in tortor sit amet justo lacinia vestibulum. Aliquam accumsan dignissim ipsum non dictum. Donec mauris ex, dapibus a pulvinar non, semper at lectus. Mauris luctus, mauris aliquam dapibus rhoncus, felis nunc sodales felis, in faucibus nisi neque eget odio. Cras porta vehicula metus nec blandit. </p>
+     </div>
+     <!-- KC -->
+     <div class="teamBio" style="background: #7F56B7;">
+       <img src="">
+       <h3 class="name">Hi, I am Kevin</h3>
+       <span class="role">UX Designer/Protoryper</span>
+       <span class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam interdum metus. </span>
+       <p class="detailBio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non augue sed lacus venenatis sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce felis orci, interdum id nisl vel, bibendum tristique ante. Duis semper nibh eros, sed consequat ligula maximus eu. Integer aliquet dictum sapien nec rutrum. Pellentesque eget ornare lectus, in iaculis sapien. Cras in tortor sit amet justo lacinia vestibulum. Aliquam accumsan dignissim ipsum non dictum. Donec mauris ex, dapibus a pulvinar non, semper at lectus. Mauris luctus, mauris aliquam dapibus rhoncus, felis nunc sodales felis, in faucibus nisi neque eget odio. Cras porta vehicula metus nec blandit. </p>
+     </div>
+     <!-- Azure -->
+     <div class="teamBio" style="background: #000080;">
+       <img src="">
+       <h3 class="name">Hi, I am Azure</h3>
+       <span class="role">Front End Developer/Desktop Prototyper</span>
+       <span class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam interdum metus. </span>
+       <p class="detailBio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non augue sed lacus venenatis sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce felis orci, interdum id nisl vel, bibendum tristique ante. Duis semper nibh eros, sed consequat ligula maximus eu. Integer aliquet dictum sapien nec rutrum. Pellentesque eget ornare lectus, in iaculis sapien. Cras in tortor sit amet justo lacinia vestibulum. Aliquam accumsan dignissim ipsum non dictum. Donec mauris ex, dapibus a pulvinar non, semper at lectus. Mauris luctus, mauris aliquam dapibus rhoncus, felis nunc sodales felis, in faucibus nisi neque eget odio. Cras porta vehicula metus nec blandit. </p>
+     </div>
+     <!-- Fiona  -->
+     <div class="teamBio" style="background: #FF2F91;">
+       <img src="">
+       <h3 class="name">Hi, I am Fiona</h3>
+       <span class="role">UX Designer/Protoryper</span>
+       <span class="quote">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam interdum metus. </span>
+       <p class="detailBio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam non augue sed lacus venenatis sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce felis orci, interdum id nisl vel, bibendum tristique ante. Duis semper nibh eros, sed consequat ligula maximus eu. Integer aliquet dictum sapien nec rutrum. Pellentesque eget ornare lectus, in iaculis sapien. Cras in tortor sit amet justo lacinia vestibulum. Aliquam accumsan dignissim ipsum non dictum. Donec mauris ex, dapibus a pulvinar non, semper at lectus. Mauris luctus, mauris aliquam dapibus rhoncus, felis nunc sodales felis, in faucibus nisi neque eget odio. Cras porta vehicula metus nec blandit. </p>
+     </div>
+    </div>
     </dir>
   </div>
 </div>
