--- a/css/team.css
+++ b/css/team.css
@@ -1,3 +1,4 @@
+/* ----- General ----*/
 .svg_con{margin: 40px auto;width: 100%; position: relative;}
 
 .intro {margin-top: 20px;}
@@ -8,6 +9,22 @@
 #CN,#US{fill:#858688; }
 #CN:hover,#US:hover{fill:#07C1E4; cursor: pointer;}
 
+/* ---- Team Bio Section  -----*/
+.teamBio{
+	/*visibility: hidden;*/
+	display: block;
+	border: #ccc 1px solid;
+	border-radius: 5px;
+	padding: 20px;
+	width: 50%;
+	height: 20%;
+	color: #fff;
+	 /* each member can pick any color */
+}
+.teamBio h3{
+	margin-top: 0;
+	font-size: 32px;
+}
 @media only screen and (max-width: 768px) {
 	.intro h1{font-size: 20px; }
 }
