--- a/css/team.css
+++ b/css/team.css
@@ -6,25 +6,24 @@
 .svg_map{display: block; width: 100%; }
 
 
-#CN,#US{fill:#858688; }
-#CN:hover,#US:hover{fill:#07C1E4; cursor: pointer;}
+#CN,#US{fill:#07C1E4; }
+/*#CN:hover,#US:hover{fill:#07C1E4; cursor: pointer;}*/
+
+/* ---- Team section  ---- */
+.teamContainer{position: relative;}
 
 /* ---- Team Bio Section  -----*/
-.teamBio{
-	/*visibility: hidden;*/
-	display: block;
-	border: #ccc 1px solid;
+#team-ah, #team-dd, #team-al, #team-kc, #team-fw{
+	position: absolute;
+	display: none;border: #ccc 1px solid;
 	border-radius: 5px;
 	padding: 20px;
 	width: 50%;
-	height: 20%;
-	color: #fff;
-	 /* each member can pick any color */
-}
-.teamBio h3{
-	margin-top: 0;
-	font-size: 32px;
-}
+	color: #fff;}
+#team-ah h3, #team-dd h3, #team-al h3, #team-kc h3, #team-fw h3{margin-top: 0;
+	font-size: 32px;}
+
+#avatar-ah:hover #team-ah {display: block;}
 @media only screen and (max-width: 768px) {
 	.intro h1{font-size: 20px; }
 }
