--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -25,7 +25,7 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('<%= Source_img %>/lego/prototypes.jpg')"> 
+        <div class="block-a" style="background-image:url('<%= Source_img %>/watercolor/experimental2.jpg')"> 
         <div class="block_coverA">
         <p class="list_title">Prototypes</p>
         </div>
@@ -34,14 +34,14 @@
       </div>
       <div class="block-wrapper">
       <a class="sectionBlock" href="./research/index.html">
-        <div class="block-l" style="background-image:url('<%= Source_img %>/lego/research.jpg')"> 
+        <div class="block-l" style="background-image:url('<%= Source_img %>/watercolor/research.jpg')"> 
         <div class="block_cover">
         <p class="list_title">Research</p>
         </div>
         </div>
       </a>
       <a class="sectionBlock" href="./team/index.html"> 
-        <div class="block-r" style="background-image:url('<%= Source_img %>/lego/team.jpg')">
+        <div class="block-r" style="background-image:url('<%= Source_img %>/watercolor/team.jpg')">
         <div class="block_cover">
         <p class="list_title">Team</p>
         </div>
