--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -25,8 +25,8 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('<%= Source_img %>/watercolor/experimental2.jpg')"> 
-        <div class="block_coverA">
+        <div class="block-a" style="background-image:url('<%= Source_img %><%= Version %>/prototype.svg')"> 
+        <div class="block_cover">
         <p class="list_title">Prototypes</p>
         </div>
       </div>
@@ -34,16 +34,16 @@
       </div>
       <div class="block-wrapper">
       <a class="sectionBlock" href="./research/index.html">
-        <div class="block-l" style="background-image:url('<%= Source_img %>/watercolor/research.jpg')"> 
+        <div class="block-l" style="background-image:url('<%= Source_img %><%= Version %>/research.svg')"> 
         <div class="block_cover">
-        <p class="list_title">Research</p>
+        <p class="list_title">RESEARCH & DEVELOPMENT</p>
         </div>
         </div>
       </a>
-      <a class="sectionBlock" href="./team/index.html"> 
-        <div class="block-r" style="background-image:url('<%= Source_img %>/watercolor/team.jpg')">
+      <a class="sectionBlock" href="./team/index.html">
+        <div class="block-r" style="background-image:url('<%= Source_img %><%= Version %>/team.svg')">
         <div class="block_cover">
-        <p class="list_title">Team</p>
+        <p class="list_title">TEAM MEMBERS</p>
         </div>
       </div>
       </a>
