--- a/_view/list.ejs
+++ b/_view/list.ejs
@@ -27,9 +27,7 @@
                 <% } %> 
               </div>
               <!-- end of list items -->        
-              <div class='pagination'>
-               Page <%- PageFirst %><%- PagePre %><%- PageGroup %><%- PageNext %><%- PageLast %>
-              </div>    
+              <div class='pagination'><%- PageFirst %><%- PagePre %><%- PageGroup %><%- PageNext %><%- PageLast %></div>    
             </div>
             </div>
         </div>
