--- a/_view/prototypes.ejs
+++ b/_view/prototypes.ejs
@@ -23,27 +23,28 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./current/index.html">
-        <div class="block-l"  style="background-image:url('<%= Source_img %>project.jpg')">
+        <div class="block-l"  style="background-image:url('<%= Source_img %><%= Version %>/project.svg')">
         <div class="block_cover">
-        <p class="list_title">Current Projects</p>
+        <p class="list_title">CURRENT PROTOTYPES</p>
         </div>
         </div>
+      </a>     
+      <a class="sectionBlock" href="./archived/index.html">
+        <div class="block-r" style="background-image:url('<%= Source_img %><%= Version %>/archiving.svg')"> 
+        <div class="block_cover">
+          <p class="list_title">ARCHIVED PROTOTYPES</p></div></div>
       </a>
       <a class="sectionBlock" href="./experimental/index.html">
-        <div class="block-r" style="background-image:url('<%= Source_img %>experimental.jpg')"> 
+        <div class="block-l" style="background-image:url('<%= Source_img %><%= Version %>/experimental.svg')"> 
         <div class="block_cover">
-          <p class="list_title">Experimental Concepts</p></div>
+          <p class="list_title">EXPERIMENTAL CONCEPTS</p></div>
           </div>
       </a>
-      <a class="sectionBlock" href="./archived/index.html">
-        <div class="block-l" style="background-image:url('<%= Source_img %>archiving.jpeg')"> 
-        <div class="block_cover">
-          <p class="list_title">Archived Projects</p></div></div>
-      </a>
+
       <a class="sectionBlock" href="./faq/index.html">
-        <div class="block-r" style="background-image:url('<%= Source_img %>faq.jpg')"> 
+        <div class="block-r" style="background-image:url('<%= Source_img %><%= Version %>/faq.svg')"> 
         <div class="block_cover">
-        <p class="list_title">FAQ & Troubleshoot</p>
+        <p class="list_title">TROUBLESHOOTING</p>
         </div>
         </div>
       </div>
