--- a/_view/docs.ejs
+++ b/_view/docs.ejs
@@ -27,7 +27,9 @@
  </div>   
   </div>
  <!-- footer --> 
+ <div class="footerWrap">
  <%- include('controls/footer') %>
+ </div>
  <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
