--- a/_view/list.ejs
+++ b/_view/list.ejs
@@ -31,6 +31,8 @@
             </div>
             </div>
         </div>
+        <div class="footerWrap">
       <%- include('controls/footer') %>
+  </div>
   </body>
 </html>
