--- a/_view/team.ejs
+++ b/_view/team.ejs
@@ -74,6 +74,8 @@
   </div>
   <div class='team_project_photo'></div>
   <!-- footer -->
+  <div class="footerWrap">
   <%- include('controls/footer') %>
+  </div>
 </body>
 </html>
