--- a/css/public.css
+++ b/css/public.css
@@ -1,15 +1,15 @@
-*{padding: 0px; margin: 0px;font-family: Helvetica, Arial, sans-serif;color: #242D3C; font-size: 12px;}
+*{padding: 0px; margin: 0px;/*font-family: Helvetica, Arial, sans-serif*/;font-family: 'Quicksand', sans-serif; color: #242D3C; font-size: 12px;}
 
 
-body { background-color: #fefefe;  overflow: auto; min-width: 300px;}
+body {font-family: 'Quicksand', sans-serif; background-color: #fefefe;  overflow: auto; min-width: 300px; }
 
 a{color: #000;  word-wrap:break-word;}
 a:hover {color:#666;}
 h1, h2, h3, h4, h5,h6{ margin-top: 0;}
 ul,li{list-style: none; margin: 0px;}
 
-.container { width: 100%;  display:flex;  flex-flow: row;  display: -webkit-flex; -webkit-flex-flow: row;margin:0 auto;  position: relative;}
-.wrapper{ width: 1044px; margin:10px auto; padding:0 20px;}
+.container { width: 100%;  display:flex;  flex-flow: row;  display: -webkit-flex; -webkit-flex-flow: row;margin:0 auto;  position: relative; background: #D9D8D7;}
+.wrapper{ width: 1044px; margin: 0 auto; padding:10px 20px; background: #fefefe;}
 
 .container_left{ width: 40px; -webkit-flex:none; flex:none;}
 .main{  -webkit-flex:1; flex:1; margin-top: 0px; }
@@ -20,17 +20,19 @@ ul,li{list-style: none; margin: 0px;}
 
 .breadcrumbs{ padding: 0; margin-top:20px; height: 30px; max-width: 100%; overflow: hidden;}
 .breadcrumbs li{ display: inline; font-size: 12px; margin-right: 10px; }
-.breadcrumbs li a{ color: #4F5051;font-size: 12px; }
+.breadcrumbs li a{ color: #666;font-size: 12px; } /* color was #4F5051*/
 .breadcrumbs li+li::before{ content: '>'; color: #4F5051; margin-right: 5px; }
 .breadcrumbs li:last-child a{ text-decoration: none;}
 .content{ width: 100%; /* border-right: 1px solid #ccc; */ }
-.copyright {   width: 100%; margin: 80px auto; text-align: center;  color: #4F5051; font-size: 12px;}
+.footerWrap { background: #D9D8D7;width: 100%;}
+.copyright {  width:1084px; margin: 0 auto; text-align: center;  color: #4F5051; font-size: 12px; background: #Fefefe; height: 80px;}
+
 
 /* header */
-.header { background-color: #fff; position: relative; width: 100%; margin: 0 auto; z-index: 3; }
+.header { background-color: #D9D8D7; position: relative; width: 100%; margin: 0 auto; z-index: 3; }
 
 /* center nav items */
-.NavContent{ width: 1024px; margin: 0 auto; position: relative; height: 80px;}
+.NavContent{ width: 1084px; margin: 0 auto; position: relative; height: 80px; background: #fefefe;}
 .NavContent .logo{display: block; position: absolute; top: 0px;left: 10px; height: 80px; }
 .NavContent .logo img{height: 70%; margin-top: 14px; display: inline-block; vertical-align: top;}
 .NavContent .logo span{font-size: 18px;display: inline-block;vertical-align: top;margin-left: 17px; height: 80px; line-height: 80px;}
