Team member page update + css update

--- a/_view/index.ejs
+++ b/_view/index.ejs
@@ -25,7 +25,7 @@
       <!--content blocks -->
       <div class="block-wrapper">
       <a class="sectionBlock" href="./prototypes/index.html">
-        <div class="block-a" style="background-image:url('<%= Source_img %><%= Version %>/prototype.svg')"> 
+        <div class="block-a" style="background-image:url('<%= Source_img %><%= Version %>/prototype.svg'); background-position: -34px -23px; background-color:#F05424; "> 
         <div class="block_cover">
         <p class="list_title">Prototypes</p>
         </div>
